Minor style tweaks

--- a/src/bootstrap/less/variables.less
+++ b/src/bootstrap/less/variables.less
@@ -15,8 +15,8 @@
 @grayDark:              #2a2a28;
 @gray:                  #565551;
 @grayLight:             #d5d4cc;
-@grayLighter:           #eeeee4;
-@white:                 #ECECEB;
+@grayLighter:           #E9E7E2;
+@white:                 #FAFAFA;
 
 
 // Accent colors
