--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,4 +22,6 @@
       </div>
     </div>
   </body>
+  <script type="text/javascript" charset="utf-8" src="/js/jquery.min.js"></script>
+  <script type="text/javascript" charset="utf-8" src="/js/app.min.js"></script>
 </html>
