--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
       </div>
       <div class="span8 footer">
         <div class="inside">
-          <p><a href="/">andyvanee.com</a></p>
+          <p><a href="/">andyvanee.com</a> | <a href="https://github.com/Andyvanee/andyvanee.github.com/wiki">wiki</a></p>
         </div>
       </div>
     </div>
