--- a/css/a.css
+++ b/css/a.css
@@ -1,4 +1,4 @@
-body {}
+body { background-image: url(/img/xvvmq.png);}
 h1.page-title {
     border-bottom: 2px solid #CB6A2A;
     margin-bottom: 30px;
