--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="row">
       <div class="span8">
-        <h1 class="page-title"><a href="/">andyvanee</a></h1>
+        <h1 class="page-title"><a href="/">andyvanee</a><span class="subhead">blog</span></h1>
       </div>
       <div class="span8">
         {{ content }}
