--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,8 @@ layout: default
   {{ content }}
 </div>
 <p> tags:{% for tag in page.tags %} <a class="badge badge-info" href="/tag/{{ tag }}/">{{ tag }}</a>{% endfor %}</p>
-<p class="well"><a href="mailto:andy@andyvanee.com">Email</a> your
+<p class="well">
+    <a href="mailto:andy@andyvanee.com?subject=Comments%20on%3A%20{{page.title|UrlEncode}}">Email</a> your
     comments to me. I will try to respond to all comments either by revising the
     post, or by responding personally. I promise not post or otherwise mishandle
     your email address.
