Add site data to template, and remove _site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>andyvanee.com - {{ page.title }}</title>
+    <title>{{ site.name }} - {{ page.title }}</title>
     <link href="http://fonts.googleapis.com/css?family=Rokkitt:700|Cantarell:400,700,400italic" rel="stylesheet" type="text/css">
     <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/css/a.css" rel="stylesheet" type="text/css">
     <link rel="alternate" type="application/rss+xml" title="andyvanee.com feed" href="http://andyvanee.com/feed.xml" />
+    <meta name="description" content="{{ site.description }}">
   </head>
   <body>
   <div class="container">
