--- a/jekyll/_layouts/post.html
+++ b/jekyll/_layouts/post.html
@@ -21,7 +21,8 @@ layout: default
     <a href="mailto:andy@andyvanee.com?subject=Comments%20on%3A%20{{page.title|UrlEncode}}">
         Email
     </a>
-    your comments to me. I will try to respond to all comments either by revising the
-    post, or by responding personally. I promise not post or otherwise mishandle
-    your email address.
+    your comments or
+    <a href="https://twitter.com/andyvanee">send me a tweet</a>.
+    I will try to respond to all comments either by revising the
+    post, or by responding personally. I promise not post or otherwise mishandle your email address:)
 </p>
