--- a/server/views/create.liquid
+++ b/server/views/create.liquid
@@ -1,4 +1,4 @@
-<form action='/create/page' method='post'>
+<form action='/page/create' method='post'>
     <input type='hidden' value='post' name='layout'>
     <!--<select name='layout'>
         <option value='default'>Default</option>
