--- a/server/views/default.liquid
+++ b/server/views/default.liquid
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{ site_name }} - {{ page_title }}</title>
+    <title>{{ site.name }} - {{ page.title }}</title>
     <link href="http://fonts.googleapis.com/css?family=Rokkitt:700|Cantarell:400,700,400italic" rel="stylesheet" type="text/css">
     <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/css/a.css" rel="stylesheet" type="text/css">
     <link rel="alternate" type="application/rss+xml" title="andyvanee.com feed" href="http://andyvanee.com/feed.xml" />
-    <meta name="description" content="{{ site_description }}">
+    <meta name="description" content="{{ site.description }}">
   </head>
   <body>
   <div class="container">
@@ -15,7 +15,7 @@
         <h1 class="page-title"><a href="/">andyvanee</a><span class="subhead">blog</span></h1>
       </div>
       <div class="span8">
-        {{ page_content }}
+        {{ page.content }}
       </div>
       <div class="span8 footer">
         <div class="inside">
