Not so much bright

--- a/assets/bootstrap/less/variables.less
+++ b/assets/bootstrap/less/variables.less
@@ -39,7 +39,7 @@
 
 // Links
 // -------------------------
-@linkColor:             #5382D6;
+@linkColor:             #2E63C4;
 @linkColorHover:        lighten(@linkColor, 10%);
 
 
