--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -7,6 +7,7 @@
     <link href="/css/a.css" rel="stylesheet" type="text/css">
     <link rel="alternate" type="application/rss+xml" title="andyvanee.com feed" href="http://andyvanee.com/feed.xml" />
     <meta name="description" content="{{ site.description }}">
+    <meta name="google-site-verification" content="s26OWDKfDLzh9MT2cHAINISCx9kOQLBQpf4mDD84gvc" />
   </head>
   <body>
   <div class="container">
@@ -30,7 +31,7 @@
 
     <script type="text/javascript" charset="utf-8" src="/js/jquery.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="/js/app.min.js"></script>
-    
+
     <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
