Adding some links and cleaning up for latest jekyll

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -23,6 +23,12 @@
           <p>
             <a href="/index.html">andyvanee.com</a>
             |
+            <a href="https://twitter.com/andyvanee">twitter</a>
+            |
+            <a href="https://plus.google.com/116218425666803224100?rel=author">google+</a>
+            |
+            <a href="https://github.com/Andyvanee">github</a>
+            |
             <a href="https://github.com/Andyvanee/andyvanee.github.com/wiki">wiki</a>
           </p>
         </div>
