--- a/source/stylesheets/all.css.less
+++ b/source/stylesheets/all.css.less
@@ -36,8 +36,10 @@ a {
   margin: 0 auto;
   padding: 1em 2em;
   background-color: @ui-bg;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.8);
   box-shadow: 0 0 800px darken(@ui-bg, 15%);
+  border: 1px solid darken(@ui-bg, 15%);
+  border-width: 0 1px;
 }
 
 .date {
