--- a/source/stylesheets/all.css.less
+++ b/source/stylesheets/all.css.less
@@ -34,7 +34,7 @@ a {
   width: 34em;
   max-width: 100%;
   margin: 0 auto;
-  padding: 1em 2em;
+  padding: 1em 4%;
   background-color: @ui-bg;
   background-color: rgba(255, 255, 255, 0.8);
   box-shadow: 0 0 800px darken(@ui-bg, 15%);
