--- a/source/tag.html.erb
+++ b/source/tag.html.erb
@@ -12,7 +12,7 @@ per_page: 12
   <% end %>
 <% end %>
 
-<ul>
+<ul class="article-list">
   <% page_articles.each_with_index do |article, i| %>
     <li><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></li>
   <% end %>
