--- a/source/stylesheets/all.css.less
+++ b/source/stylesheets/all.css.less
@@ -76,8 +76,8 @@ code {
 h1 {
   font-size: 1.3em;
   a, a:visited {
-    color: darken(@ui-bg, 15%);
-    text-shadow: -1px 1px 2px white;
+    color: #A9C9B9;
+    letter-spacing: 2.3px;
   }
 }
 
