--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,13 +1,17 @@
 ---
 pageable: true
-per_page: 15
+per_page: 6
 ---
 
 <ul class="article-list">
 <% page_articles.each_with_index do |article, i| %>
   <li>
-    <%= link_to article.title, article %>
+    <span class="title"><%= link_to article.title, article %></span>
     <span class="date"><%= article.date.strftime('%b %e') %></span>
+    <div class="summary">
+      <%= article.summary %>
+      <p class="read-more"><%= link_to "read more", article %></p>
+    </div>
   </li>
 <% end %>
 </ul>
