--- a/source/stylesheets/all.css.less
+++ b/source/stylesheets/all.css.less
@@ -55,6 +55,11 @@ a {
   border-width: 1px 0 0;
 }
 
+.summary, .read-more {
+  font-size: 0.9em;
+  p, blockquote { margin-top: 0; margin-bottom: 0; padding: 0 1em; }
+}
+
 .next, .prev, .page-no {
   padding: 0 1em 0 0;
 }
@@ -65,6 +70,9 @@ ul.article-list {
   li {
     padding: 0.5em 0;
     border-top: 1px solid @border-color;
+  }
+  .title {
+    font-size: 1.2em;
   }
 }
 
