--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -62,5 +62,6 @@
         <p><a href="/">andyvanee.com</a></p>
       </div>
     </div><!-- .container -->
+    <%= javascript_include_tag "all" %>
   </body>
 </html>
