Trying out moot comments

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -42,6 +42,8 @@
             </div>
           <% end %>
 
+          <a class="moot" href="https://moot.it/i/d3scribe/comments:<%= current_article.slug %>">Comments</a>
+
           </div> <!-- .post-single -->
 
           <div class="pagination">
@@ -67,5 +69,7 @@
       </div>
     </div><!-- .container -->
     <%= javascript_include_tag "all" %>
+    <link rel="stylesheet" href="https://cdn.moot.it/1/moot.css">
+    <script src="https://cdn.moot.it/1/moot.min.js"></script>
   </body>
 </html>
