--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,6 +15,7 @@ per_page: 6
       <% else %>
         <%= article.body %>
       <% end %>
+      <a class="moot" href="https://moot.it/i/d3scribe/comments:<%= article.slug %>">Comments</a>
     </div>
   </li>
 <% end %>
