--- a/source/tag.html.erb
+++ b/source/tag.html.erb
@@ -24,6 +24,7 @@ per_page: 12
       <% else %>
         <%= article.body %>
       <% end %>
+      <a class="moot" href="https://moot.it/i/d3scribe/comments:<%= article.slug %>">Comments</a>
     </li>
   <% end %>
 </ul>
