subtle color tweaks

--- a/source/stylesheets/all.css.less
+++ b/source/stylesheets/all.css.less
@@ -5,9 +5,10 @@
 @fg2: lighten(@fg, 50%);
 @bg: #FFF;
 @link: #78B;
-@minimal: #CECEC8;
+@minimal: #E7E7E7;
 @font1: 'Muli';
 @font2: 'Raleway';
+@heading-color: #6a6a6a;
 
 body, html {
   font-family: @font1;
@@ -23,6 +24,8 @@ body {
   max-width: 100%;
   margin: 0 auto;
 }
+
+h1, h2, h3, h4 { color: @heading-color; }
 
 .container {
   padding: 0 2em;
