Add proper web-font

--- a/source/stylesheets/all.css.less
+++ b/source/stylesheets/all.css.less
@@ -6,8 +6,8 @@
 @bg: #FFF;
 @link: #78B;
 @minimal: #E7E7E7;
-@font1: 'Muli';
-@font2: 'Raleway';
+@font1: 'Muli', sans-serif;
+@font2: 'Raleway', sans-serif;
 @heading-color: #6a6a6a;
 
 body, html {
