New post and font with bold weights

--- a/source/stylesheets/all.css.less
+++ b/source/stylesheets/all.css.less
@@ -6,13 +6,13 @@
 @bg: #FFF;
 @link: #78B;
 @minimal: #E7E7E7;
-@font1: 'Muli', sans-serif;
-@font2: 'Raleway', sans-serif;
+@font1: 'Roboto', sans-serif;
+@font2: 'Roboto', sans-serif;
 @heading-color: #6a6a6a;
 
 body, html {
   font-family: @font1;
-  font-weight: 100;
+  font-weight: 300;
   font-size: 18px;
   line-height: 1.7em;
   color: @fg;
