--- a/source/stylesheets/syntax.css.erb
+++ b/source/stylesheets/syntax.css.erb
@@ -1,7 +1,7 @@
 <%= Rouge::Themes::Github.render(:scope => '.highlight') %>
 
 pre, code {
-  font-family: Menlo, Monaco, 'Courier New';
+  font-family: "Courier New", Courier, monospace;
   font-size: 0.9em;
   line-height: 1.4em;
 }
