--- a/source/stylesheets/all.css.less
+++ b/source/stylesheets/all.css.less
@@ -3,7 +3,7 @@
 
 @fg: #626262;
 @fg2: lighten(@fg, 30%);
-@bg: #fafcfa;
+@bg: #fefefb;
 @link: #78B;
 @minimal: #E7E7E7;
 @font1: Courier, "Courier New", monospace;
@@ -30,6 +30,10 @@ body {
 
 h1, h2, h3, h4, .title {
   color: @heading-color;
+}
+
+img {
+  max-width: 100%;
 }
 
 .container {
