--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,7 +7,7 @@ per_page: 6
 <% page_articles.each_with_index do |article, i| %>
   <li>
     <span class="title"><%= link_to article.title, article %></span>
-    <span class="date"><%= article.date.strftime('%b %e') %></span>
+    <span class="date"><%= article.date.strftime('%b %d, %Y')%></span>
     <div class="summary">
       <% if article.body.length > 5000 %>
         <%= article.summary %>
