--- a/source/tag.html.erb
+++ b/source/tag.html.erb
@@ -16,7 +16,7 @@ per_page: 12
   <% page_articles.each_with_index do |article, i| %>
     <li>
       <span class="title"><%= link_to article.title, article %></span>
-      <span class="date"><%= article.date.strftime('%b %e') %></span>
+      <span class="date"><%= current_article.date.strftime('%b %d, %Y')%></span>
 
       <% if article.body.length > 5000 %>
         <%= article.summary %>
