--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -73,5 +73,13 @@
     <%= javascript_include_tag "all" %>
     <link rel="stylesheet" href="https://cdn.moot.it/1/moot.css">
     <script src="https://cdn.moot.it/1/moot.min.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-41421022-1', 'andyvanee.com');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
